2014-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml: (ov-new1.7.31): Add new section.

2014-06-26  Corinna Vinschen  <corinna@vinschen.de>

	* legal.xml: Fix copyright.

2014-06-17  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* faq-programming.xml: Add gettext-devel to list of packages needed to
	build Cygwin.

2014-04-04  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml: (ov-new1.7.29): Fix incomplete XML tagging.

2014-03-31  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* new-features.xml: (ov-new1.7.29): Add new section.

2014-01-29  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* faq-setup.xml: Minor snapshot instruction rewording.  Update
	discussion about setup*.exe.
	* faq-using.xml: Update information about setup*.exe.
	* faq-what.xml: Ditto.

2014-01-27  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.28): Add new section.

2014-01-07  Mark Geisert  <mark@maxrnd.com>

	* faq-programming.xml: Update packages needed to build Cygwin.

2013-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.27): Add new section.

2013-11-29  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.26): Fix section ID and title.  Add
	posix_spawn item.

2013-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.26): Add new section.

2013-11-12  Tom Schutter  <t.schutter@comcast.net>

	* faq-setup.xml (faq.setup.uninstall-service): Describe how to unhook
	cyglsa DLL from OS before uninstalling.

2013-11-11  Corinna Vinschen  <corinna@vinschen.de>

	* faq-setup.xml: Throughout remove setup.exe, use setup or setup-x86...
	instead.
	(faq.setup.cli): Reproduce latest --help output.
	(faq.setup.noroot): New section.
	(faq.setup.setup-fails-on-ts): Remove section.
	* setup-net.xml (internet-setup): Mention setup-x86{_64} in first
	paragraph.  Add note to allow using setup.exe in subsequent paragraphs.
	Add paragraph to introduce --no-admin option.
