@@ -1,0 +1,156 @@
+<?xml version="1.0" encoding='UTF-8'?>
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook V4.5//EN"
+		"http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd">
+
+<qandadiv id="faq.about">
+<title>About Cygwin</title>
+
+<!-- faq-what.xml -->
+<qandaentry id="faq.what.what">
+<question><para>What is it?</para></question>
+<answer>
+
+<para>The Cygwin tools are ports of the popular GNU development tools for
+Microsoft Windows.  They run thanks to the Cygwin library which
+provides the POSIX system calls and environment these programs expect.
+</para>
+<para>With these tools installed, it is possible to write Windows console
+or GUI applications that make use of significant parts of the POSIX API.
+As a result, it is possible to easily port many Unix programs without the need
+for extensive changes to the source code.  This includes configuring
+and building most of the available GNU software (including the packages
+included with the Cygwin development tools themselves) as well as lots
+of BSD tools and packages (including OpenSSH).  Even if
+the development tools are of little to no use to you, you may have
+interest in the many standard POSIX utilities provided with the package.
+They can be used from one of the provided Unix shells like bash, tcsh or zsh,
+as well as from the standard Windows command shell if you have to for some
+sad reason.
+</para>
+</answer></qandaentry>
+
+<qandaentry id="faq.what.supported">
+<question><para>What versions of Windows are supported?</para></question>
+<answer>
+
+<para>Cygwin can be expected to run on all modern versions of Windows.
+This includes, as of the time of writing this, Windows XP SP3, Windows
+Server 2003, Windows Vista, Windows Server 2008, Windows 7, Windows
+Server 2012, Windows 8.  The 32 bit version also runs in the WOW64 32 bit
+environment on released 64 bit versions of Windows
+(XP/2003/Vista/2008/7/2008 R2/8/2012).
+Since Cygwin is a community-supported free software project, patches to
+provide support for other versions would be thoughtfully considered.
+Paid support contracts or enhancements are available through Red Hat.  For 
+information about getting a Red Hat support contract, see 
+<ulink url="http://cygwin.com/licensing.html" />.
+</para>
+<para>Keep in mind that Cygwin can only do as much as the underlying OS
+supports.  Because of this, Cygwin will behave differently, and
+exhibit different limitations, on the various versions of Windows.
+</para>
+</answer></qandaentry>
+
+<qandaentry id="faq.what.where">
+<question><para>Where can I get it?</para></question>
+<answer>
+
+<para>The home page for the Cygwin project is <ulink url="http://cygwin.com/">http://cygwin.com/</ulink>.
+There you should find everything you need for Cygwin, including links
+for download and setup, a current list of mirror sites, a User's
+Guide, an API Reference, mailing lists and archives, and additional
+ported software.
+</para>
+<para>You can find documentation for the individual GNU tools typically
+as man pages or info pages as part of the Cygwin net distribution.
+Additionally you can get the latest docs at
+<ulink url="http://www.gnu.org/manual/" />.  (You should read GNU manuals from a
+local mirror.  Check <ulink url="http://www.gnu.org/server/list-mirrors.html" />
+for a list of them.)
+</para>
+</answer></qandaentry>
+
+<qandaentry id="faq.what.free">
+<question><para>Is it free software?</para></question>
+<answer>
+
+<para>Yes.  Parts are GNU software (gcc, gas, ld, etc...), parts are covered
+by the standard X11 license, some of it is public domain, some of
+it was written by Red Hat (or the former Cygnus Solutions) and placed under
+the GPL.  None of it is shareware.  You don't have to pay anyone to use it
+but you should be sure to read the copyright section of the FAQ for more
+information on how the GNU General Public License may affect your use of
+these tools.
+</para>
+<para>In particular, if you intend to port a proprietary (non-GPL'd)
+application using Cygwin, you will need the proprietary-use license 
+for the Cygwin library.  This is available for purchase from Red Hat;
+please visit <ulink url="http://cygwin.com/licensing.html" /> for more
+information.  All other questions should be sent to the public project
+mailing list cygwin@cygwin.com.
+</para>
+<para>Note that when we say "free" we mean freedom, not price.  The goal of
+such freedom is that the people who use a given piece of software
+should be able to change it to fit their needs, learn from it, share
+it with their friends, etc.  The Cygwin license allows you those
+freedoms, so it is free software.
+</para>
+</answer></qandaentry>
+
+<qandaentry id="faq.what.version">
+<question><para>What version of Cygwin <emphasis>is</emphasis> this, anyway?</para></question>
+<answer>
+
+<para>To find the version of the Cygwin DLL installed, you can use
+<filename>uname</filename> as on Linux or <filename>cygcheck</filename>. Refer to each command's
+<literal>--help</literal> output and the <ulink url='http://cygwin.com/cygwin-ug-net/'>Cygwin User's Guide</ulink> for more information.
+</para>
+<para>If you are looking for the version number for the whole Cygwin
+release, there is none. Each package in the Cygwin release has its own
+version.  The packages in Cygwin are continually improving, thanks to
+the efforts of net volunteers who maintain the Cygwin binary ports.
+Each package has its own version numbers and its own release process.
+</para>
+<para>So, how do you get the most up-to-date version of Cygwin?  Easy.  Just
+download the Cygwin Setup program by following the instructions
+<ulink url='http://cygwin.com/install.html'>here</ulink>.  The setup program will handle the task
+of updating the packages on your system to the latest version. For
+more information about using Cygwin's <filename>setup.exe</filename>, see 
+<ulink url='http://cygwin.com/cygwin-ug-net/setup-net.html'>Setting Up Cygwin</ulink>
+in the Cygwin User's Guide. 
+</para></answer></qandaentry>
+
+<qandaentry id="faq.what.who">
+<question><para>Who's behind the project?</para></question>
+<answer>
+
+<para><emphasis role='bold'>(Please note that if you have cygwin-specific
+questions, all of these people will appreciate it if you use the cygwin
+mailing lists rather than sending personal email.)</emphasis>
+</para>
+<para>
+Corinna Vinschen (corinna) is the current project lead. Corinna is a
+senior Red Hat engineer. Corinna is responsible for such important
+subsystems as security and networking and has recently added support to
+Cygwin for wide characters, increased path length, IPv6, advisory
+file locking and more.
+</para>
+<para>
+Yaakov Selkowitz is the Cygwin/X coordinator. Jon Turney serves on the
+Cygwin/X team as a developer.
+</para>
+<para>
+The packages in the Net release are maintained by a large group of people;
+a complete list can be found <ulink url='http://cygwin.com/cygwin-pkg-maint'>here</ulink>.
+</para>
+<para>Please note that all of us working on Cygwin try to
+be as responsive as possible and deal with patches and questions as we
+get them, but realistically we don't have time to answer all of the
+email that is sent to the main mailing list.  Making Net releases of the
+Win32 tools and helping people on the Net out is not our primary job
+function, so some email will have to go unanswered.
+</para>
+<para>Many thanks to everyone using the tools for their many contributions in
+the form of advice, bug reports, and code fixes.  Keep them coming!
+</para></answer></qandaentry>
+</qandadiv>
